--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
 -->
 <html>
     <head>
@@ -10,38 +7,19 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body onload="doGLDraw()">
-
-    <!-- everything in-between the <script> tag is javascript -->
-    <script type="x-shader/x-vertex" id="VertexShader">
-        // this is the vertex shader
-        attribute vec3 aSquareVertexPosition;  // Vertex shader expects one vertex position
-                        // naming convention, attributes always begin with "a"
-
-        void main(void) {
-            // Convert the vec3 into vec4 for scan conversion and
-            // assign to gl_Position to pass the vertex to the fragment shader
-            gl_Position = vec4(aSquareVertexPosition, 1.0);
-        }
-        // End of vertex shader
-    </script>
-
-    <script type="x-shader/x-fragment" id="FragmentShader">
-        // this is the fragment (or pixel) shader
-        void main(void) {
-            // for every pixel called (within the square) sets
-            // constant color white with alpha-channel value of 1.0
-            gl_FragColor = vec4(0.0, 1.0, 1.0, 1.0);
-        }
-        // End of fragment/pixel shader
-    </script>
-
+    <body onload="new myGame('GLCanvas');">
     <!-- the following says there are javascript source code contained in
          the external source files
     -->
-    <script type="text/javascript" src="src/ShaderSupport.js"></script>
-    <script type="text/javascript" src="src/VertexBuffer.js"></script>
-    <script type="text/javascript" src="src/WebGL.js"></script>
+    <!-- the following says there are javascript source code contained in
+         <script type="not-js" src="src/GLSL/simpleVS.glsl"></script>
+    -->
+    <script type="text/javascript" src="src/Engine/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
+    <script type="text/javascript" src="src/Engine/ShaderSupport.js"></script>
+    <script type="text/javascript" src="src/myGame/myGame.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
+
 
     <canvas id="GLCanvas" width="640" height="480">
         <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
