adds transform class

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     -->
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
     <script type="text/javascript" src="src/Engine/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/ShaderSupport.js"></script>
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
