--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="src/Engine/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
-    <script type="text/javascript" src="src/Engine/ShaderSupport.js"></script>
+    <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 
