--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
     <script type="text/javascript" src="src/Engine/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
+    <script type="text/javascript" src="src/Engine/Camera.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
