--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body onload="new myGame('GLCanvas');">
+    <body onload="new MyGame('GLCanvas');">
     <!-- the following says there are javascript source code contained in
          the external source files
     -->
@@ -19,8 +19,9 @@
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Camera.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
     <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
-    <script type="text/javascript" src="src/myGame/myGame.js"></script>
+    <script type="text/javascript" src="src/myGame/MyGame.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
 
 
