completes chapter 4.2 Input

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Camera.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
     <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame.js"></script>
