--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body onload="new MyGame('GLCanvas');">
+    <body onload="var myGame = new MyGame('GLCanvas');
+    gEngine.Core.initializeEngineCore('GLCanvas', myGame);">
     <!-- the following says there are javascript source code contained in
          the external source files
     -->
@@ -24,6 +25,9 @@
     <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
+    <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
+    <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
+    <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
 
 
     <canvas id="GLCanvas" width="640" height="480">
