--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- the following says there are javascript source code contained in
          <script type="not-js" src="src/GLSL/simpleVS.glsl"></script>
     -->
+    <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
     <script type="text/javascript" src="src/Engine/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
