--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body onload="var myGame = new MyGame('GLCanvas');
-    gEngine.Core.initializeEngineCore('GLCanvas', myGame);">
-    <!-- the following says there are javascript source code contained in
-         the external source files
-    -->
-    <!-- the following says there are javascript source code contained in
-         <script type="not-js" src="src/GLSL/simpleVS.glsl"></script>
-    -->
+    gEngine.Core.initializeEngineCore('GLCanvas', myGame);
+    ">
+
+    <canvas id="GLCanvas" width="640" height="480">
+        <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
+        Your browser does not support the HTML5 canvas.
+        <!-- this message will show only if WebGL clearing failed -->
+    </canvas>
+
     <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
     <script type="text/javascript" src="src/Engine/Renderable.js"></script>
@@ -29,13 +31,6 @@
     <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
-
-
-    <canvas id="GLCanvas" width="640" height="480">
-        <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
-        Your browser does not support the HTML5 canvas.
-        <!-- this message will show only if WebGL clearing failed -->
-    </canvas>
 
 </body>
 </html>
