completes 4.5, some jank between the book though

--- a/index.html
+++ b/index.html
@@ -17,20 +17,31 @@
         <!-- this message will show only if WebGL clearing failed -->
     </canvas>
 
-    <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
+
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderable.js"></script>
-    <script type="text/javascript" src="src/Engine/Transform.js"></script>
-    <script type="text/javascript" src="src/Engine/Camera.js"></script>
+
+    <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
-    <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
-    <script type="text/javascript" src="src/myGame/MyGame.js"></script>
-    <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
+
     <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
+
+    <script type="text/javascript" src="src/Engine/Scene.js"></script>
+    <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Transform.js"></script>
+    <script type="text/javascript" src="src/Engine/Camera.js"></script>
+
+    <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
+
+
+    <script type="text/javascript" src="src/myGame/MyGame.js"></script>
+    <script type="text/javascript" src="src/MyGame/BlueLevel.js"></script>
+    
+
 
 </body>
 </html>
