--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
+    <script type="text/javascript" src="src/Engine/Resources/Engine_AudioClips.js"></script>
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
     <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
