halfway through chapter 5.1

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <script type="text/javascript" src="src/Engine/Resources/Engine_AudioClips.js"></script>
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
-    <script type="text/javascript" src="src/Engine/SimpleShader.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Camera.js"></script>
 
