--- a/index.html
+++ b/index.html
@@ -19,30 +19,36 @@
 
 
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
-
+    <!-- Core of Engine -->
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
 
+    <!-- Resource support -->
     <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_AudioClips.js"></script>
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
-    <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
+
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Camera.js"></script>
+    <!-- Renderables -->
+    <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
 
-    <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
+    <!-- Shaders -->
+    <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
 
-
+    <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/MyGame.js"></script>
     <script type="text/javascript" src="src/MyGame/BlueLevel.js"></script>
-    
+
+    <!-- Util -->
+    <script type="text/javascript" src="src/Util/SceneFileParser.js"></script>
 
 
 </body>
