--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_Textures.js"></script>
 
     <!-- Resource support -->
     <script type="text/javascript" src="src/Engine/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_DefaultResources.js"></script>
     <script type="text/javascript" src="src/Engine/Resources/Engine_AudioClips.js"></script>
+
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
