--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
 
     <!-- Shaders -->
     <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/MyGame.js"></script>
