--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
 
     <!-- Shaders -->
     <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
