--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!--
--->
 <html>
     <head>
         <title>Game Engine</title>
@@ -9,8 +7,7 @@
           <link href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.1.0/mocha.css" rel="stylesheet" />
     </head>
     <body onload="var myGame = new MyGame('GLCanvas');
-    gEngine.Core.initializeEngineCore('GLCanvas', myGame);
-    ">
+    gEngine.Core.initializeEngineCore('GLCanvas', myGame);">
 
     <canvas id="GLCanvas" width="640" height="480">
         <!-- GLCanvas is the area we will draw in: a 640x480 area. -->
@@ -34,6 +31,9 @@
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 
+    <!-- Game Objects -->
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
@@ -55,6 +55,9 @@
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
     <script type="text/javascript" src="src/myGame/BlueLevel.js"></script>
     <script type="text/javascript" src="src/myGame/GameOver.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/DyePack.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/Hero.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/Minion.js"></script>
 
     <!-- Util -->
     <script type="text/javascript" src="src/myGame/Util/SceneFileParser.js"></script>
