--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="src/myGame/Objects/DyePack.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Hero.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Minion.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/Brain.js"></script>
 
     <!-- Util -->
     <script type="text/javascript" src="src/myGame/Util/SceneFileParser.js"></script>
