--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
     <script type="text/javascript" src="src/Engine/Camera.js"></script>
+    <script type="text/javascript" src="src/Engine/BoundingBox.js"></script>
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
