--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <!-- Game Objects -->
     <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
@@ -43,6 +44,7 @@
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
@@ -60,6 +62,7 @@
     <script type="text/javascript" src="src/myGame/Objects/Hero.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Minion.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Brain.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/TextureObject.js"></script>
 
     <!-- Util -->
     <script type="text/javascript" src="src/myGame/Util/SceneFileParser.js"></script>
