--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
 
     <!-- Shaders -->
     <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
