--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
 
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
+    <!-- Cameras -->
+    <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulations.js"></script>
+
+
     <script type="text/javascript" src="src/Engine/Transform.js"></script>
-    <script type="text/javascript" src="src/Engine/Camera.js"></script>
     <script type="text/javascript" src="src/Engine/BoundingBox.js"></script>
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
