--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
     <!-- Cameras -->
     <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
     <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulations.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
 
+    <!-- Utils -->
+    <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
+    <script type="text/javascript" src="src/Engine/Utils/BoundingBox.js"></script>
+    <script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
+    <script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
 
-    <script type="text/javascript" src="src/Engine/Transform.js"></script>
-    <script type="text/javascript" src="src/Engine/BoundingBox.js"></script>
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
