--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulations.js"></script>
     <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
     <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
 
     <!-- Utils -->
     <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
