--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
 
+    <!-- Lights -->
+    <script type="text/javascript" src="src/Engine/Lights/Light.js"></script>
     <script type="text/javascript" src="src/Engine/Scene.js"></script>
 
     <!-- Cameras -->
@@ -44,6 +46,7 @@
     <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
     <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
     <script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Xform.js"></script>
 
     <!-- Utils -->
     <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
@@ -60,11 +63,14 @@
     <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
+
 
     <!-- Shaders -->
     <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
