--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/IllumRenderable.js"></script>
 
 
     <!-- Shaders -->
@@ -73,6 +74,7 @@
     <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
