--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 
+    <script type="text/javascript" src="src/Engine/Material.js"></script>
+
     <!-- Game Objects -->
     <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
@@ -75,11 +77,13 @@
     <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/ShaderMaterial.js"></script>
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame_LightControl.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame_Lights.js"></script>
+    <script type="text/javascript" src="src/myGame/MyGame_MaterialControl.js"></script>
     <script type="text/javascript" src="src/myGame/BlueLevel.js"></script>
     <script type="text/javascript" src="src/myGame/GameOver.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/DyePack.js"></script>
