--- a/index.html
+++ b/index.html
@@ -78,12 +78,19 @@
     <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/ShaderMaterial.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/ShadowCasterShader.js"></script>
+
+    <!-- Shadows -->
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowCaster.js"></script>
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver.js"></script>
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver_Stencil.js"></script>
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame_LightControl.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame_Lights.js"></script>
     <script type="text/javascript" src="src/myGame/MyGame_MaterialControl.js"></script>
+    <script type="text/javascript" src="src/myGame/MyGame_Shadow.js"></script>
     <script type="text/javascript" src="src/myGame/BlueLevel.js"></script>
     <script type="text/javascript" src="src/myGame/GameOver.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/DyePack.js"></script>
