--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="mocha"></div>
 
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
+    <script src="./webgl-debug.js"></script>
     <!-- Core of Engine -->
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
@@ -68,12 +69,21 @@
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/IllumRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
 
+    <!-- Physics -->
+    <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidShape_Collision.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidCircle.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidCircle_Collision.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidRectangle.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidRectangle_Collision.js"></script>
 
     <!-- Shaders -->
     <script type="text/javascript" src="src/Engine/Shaders/SimpleShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/TextureShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/SpriteShader.js"></script>
+    <script type="text/javascript" src="src/Engine/Shaders/LineShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/LightShader.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/ShaderLightAtIndex.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/IllumShader.js"></script>
@@ -98,7 +108,7 @@
     <script type="text/javascript" src="src/myGame/Objects/Minion.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Brain.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/TextureObject.js"></script>
-
+    <script type="text/javascript" src="src/myGame/Objects/Platform.js"></script>
     <!-- Util -->
     <script type="text/javascript" src="src/myGame/Util/SceneFileParser.js"></script>
 
