--- a/index.html
+++ b/index.html
@@ -23,34 +23,22 @@
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
-    <script type="text/javascript" src="src/Engine/Core/Engine_Textures.js"></script>
+
 
     <!-- Resource support -->
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_TextFileLoader.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_DefaultResources.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_AudioClips.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Textures.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_Fonts.js"></script>
 
+    <script type="text/javascript" src="src/Engine/Scene.js"></script>
     <script type="text/javascript" src="src/Engine/Material.js"></script>
-
-    <!-- Game Objects -->
-    <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
-    <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
-    <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
 
     <!-- Lights -->
     <script type="text/javascript" src="src/Engine/Lights/Light.js"></script>
     <script type="text/javascript" src="src/Engine/Lights/LightSet.js"></script>
-    <script type="text/javascript" src="src/Engine/Scene.js"></script>
-
-    <!-- Cameras -->
-    <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
-    <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulations.js"></script>
-    <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
-    <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
-    <script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
-    <script type="text/javascript" src="src/Engine/Cameras/Camera_Xform.js"></script>
 
     <!-- Utils -->
     <script type="text/javascript" src="src/Engine/Utils/Transform.js"></script>
@@ -64,12 +52,22 @@
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/TextureRenderable_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/SpriteAnimateRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/FontRenderable.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderables/SpriteRenderable_PixelCollision.js"></script>
+    <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/IllumRenderable.js"></script>
-    <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
+
+    <!-- Shadows -->
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowCaster.js"></script>
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver.js"></script>
+    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver_Stencil.js"></script>
+
+    <!-- Game Objects -->
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
 
     <!-- Physics -->
     <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
@@ -90,10 +88,14 @@
     <script type="text/javascript" src="src/Engine/Shaders/ShaderMaterial.js"></script>
     <script type="text/javascript" src="src/Engine/Shaders/ShadowCasterShader.js"></script>
 
-    <!-- Shadows -->
-    <script type="text/javascript" src="src/Engine/Shadows/ShadowCaster.js"></script>
-    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver.js"></script>
-    <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver_Stencil.js"></script>
+    <!-- Camera -->
+    <script type="text/javascript" src="src/Engine/Cameras/Camera.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Manipulation.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Input.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/Camera_Xform.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/CameraState.js"></script>
+    <script type="text/javascript" src="src/Engine/Cameras/CameraShake.js"></script>
+
 
     <!-- Client game code -->
     <script type="text/javascript" src="src/myGame/myGame.js"></script>
