Starts 9.2, rigidshape behavior

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <!-- Physics -->
     <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
     <script type="text/javascript" src="src/Engine/Physics/RigidShape_Collision.js"></script>
+    <script type="text/javascript" src="src/Engine/Physics/RigidShapeBehavior.js"></script>
     <script type="text/javascript" src="src/Engine/Physics/RigidCircle.js"></script>
     <script type="text/javascript" src="src/Engine/Physics/RigidCircle_Collision.js"></script>
     <script type="text/javascript" src="src/Engine/Physics/RigidRectangle.js"></script>
