completes 9.2 testin first round

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script type="text/javascript" src="src/Engine/Utils/Interpolate.js"></script>
     <script type="text/javascript" src="src/Engine/Utils/InterpolateVec2.js"></script>
     <script type="text/javascript" src="src/Engine/Utils/ShakePosition.js"></script>
+    <script type="text/javascript" src="src/Engine/Utils/CollisionInfo.js"></script>
 
     <!-- Renderables -->
     <script type="text/javascript" src="src/Engine/Renderables/Renderable.js"></script>
@@ -112,6 +113,8 @@
     <script type="text/javascript" src="src/myGame/Objects/Brain.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/TextureObject.js"></script>
     <script type="text/javascript" src="src/myGame/Objects/Platform.js"></script>
+    <script type="text/javascript" src="src/myGame/Objects/Wall.js"></script>
+    <script type="text/javascript" src="src/myGame/MyGame_Physics.js"></script>
     <!-- Util -->
     <script type="text/javascript" src="src/myGame/Util/SceneFileParser.js"></script>
 
