--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script type="text/javascript" src="src/Engine/Renderables/LineRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/LightRenderable.js"></script>
     <script type="text/javascript" src="src/Engine/Renderables/IllumRenderable.js"></script>
-
+    <script type="text/javascript" src="src/Engine/Renderables/ParticleRenderable.js"></script>
     <!-- Shadows -->
     <script type="text/javascript" src="src/Engine/Shadows/ShadowCaster.js"></script>
     <script type="text/javascript" src="src/Engine/Shadows/ShadowReceiver.js"></script>
@@ -69,6 +69,11 @@
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
+
+    <!-- Particles -->
+    <script type="text/javascript" src="src/Engine/Particles/Particle.js"></script>
+    <script type="text/javascript" src="src/Engine/Particles/ParticleGameObject.js"></script>
+    <script type="text/javascript" src="src/Engine/Particles/ParticleGameObjectSet.js">
 
     <!-- Physics -->
     <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
