--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="src/Engine/Core/Engine_Input.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Physics.js"></script>
+    <script type="text/javascript" src="src/Engine/Core/Engine_Particle.js"></script>
 
     <!-- Resource support -->
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_ResourceMap.js"></script>
