--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <!-- Particles -->
     <script type="text/javascript" src="src/Engine/Particles/Particle.js"></script>
     <script type="text/javascript" src="src/Engine/Particles/ParticleGameObject.js"></script>
-    <script type="text/javascript" src="src/Engine/Particles/ParticleGameObjectSet.js">
+    <script type="text/javascript" src="src/Engine/Particles/ParticleGameObjectSet.js"></script>
 
     <!-- Physics -->
     <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
