--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script type="text/javascript" src="src/Engine/Particles/Particle.js"></script>
     <script type="text/javascript" src="src/Engine/Particles/ParticleGameObject.js"></script>
     <script type="text/javascript" src="src/Engine/Particles/ParticleGameObjectSet.js"></script>
-
+    <script type="text/javascript" src="src/Engine/Particles/ParticleEmitter.js"></script>
     <!-- Physics -->
     <script type="text/javascript" src="src/Engine/Physics/RigidShape.js"></script>
     <script type="text/javascript" src="src/Engine/Physics/RigidShape_Collision.js"></script>
