--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/TiledGameObject.js"></script>
 
     <!-- Particles -->
     <script type="text/javascript" src="src/Engine/Particles/Particle.js"></script>
