--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="src/Engine/GameObjects/GameObject_PixelCollision.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/GameObjectSet.js"></script>
     <script type="text/javascript" src="src/Engine/GameObjects/TiledGameObject.js"></script>
+    <script type="text/javascript" src="src/Engine/GameObjects/ParallaxGameObject.js"></script>
 
     <!-- Particles -->
     <script type="text/javascript" src="src/Engine/Particles/Particle.js"></script>
