--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="src/Engine/Core/Engine_GameLoop.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Physics.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_Particle.js"></script>
-
+    <script type="text/javascript" src="src/Engine/Core/Engine_LayerManager.js"></script>
     <!-- Resource support -->
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_ResourceMap.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Resources/Engine_TextFileLoader.js"></script>
