--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <script type="text/javascript" src="src/lib/gl-matrix.js"></script>
     <script src="./webgl-debug.js"></script>
+    <!-- concatted engine -->
+    <!-- <script type="text/javascript" src="./dist/gameEngine.js"></script> -->
     <!-- Core of Engine -->
     <script type="text/javascript" src="src/Engine/Core/Engine_Core.js"></script>
     <script type="text/javascript" src="src/Engine/Core/Engine_VertexBuffer.js"></script>
